Salesforce/main/default/main/default/objects/Visita_a_Clientes__c/fields/Asignado_a__c.field-meta.xml
<CustomField>
    <fullName>Asignado_a__c</fullName>
    <formula>Owner:User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asignado a</label>
    <type>Text</type>
</CustomField>