Salesforce/main/default/main/default/objects/Visita_a_Clientes__c/fields/Cidade__c.field-meta.xml
<CustomField>
    <fullName>Cidade__c</fullName>
    <label>Cidade da Visita/Evento</label>
    <length>50</length>
    <type>Text</type>
</CustomField>