Salesforce/main/default/main/default/objects/Visita_a_Clientes__c/fields/Ciudad_relacionada__c.field-meta.xml
<CustomField>
    <fullName>Ciudad_relacionada__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ciudad relacionada</label>
    <referenceTo>Cidade__c</referenceTo>
    <relationshipLabel>Relatórios e Observações</relationshipLabel>
    <relationshipName>Relat_rios_e_Observa_es</relationshipName>
    <type>Lookup</type>
</CustomField>