Salesforce/main/default/main/default/objects/Visita_a_Clientes__c/fields/Modalidade_de_Multiplicador__c.field-meta.xml
<CustomField>
    <fullName>Modalidade_de_Multiplicador__c</fullName>
    <label>Modalidade de Multiplicador</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Multiplicador Brasmax</fullName>
                <default>true</default>
                <label>Multiplicador Brasmax</label>
            </value>
            <value>
                <fullName>Revenda Brasmax</fullName>
            </value>
            <value>
                <fullName>Concorrente</fullName>
            </value>
            <value>
                <fullName>Outro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>