Salesforce/main/default/main/default/objects/Visita_a_Clientes__c/fields/Nome_Multiplicador__c.field-meta.xml
<CustomField>
    <fullName>Nome_Multiplicador__c</fullName>
    <label>Nome Produtor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>