Salesforce/main/default/main/default/objects/Visita_a_Clientes__c/fields/Objetivos_e_Resultados_da_Visita__c.field-meta.xml
<CustomField>
    <fullName>Objetivos_e_Resultados_da_Visita__c</fullName>
    <label>Objetivos e Resultados</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>