Salesforce/main/default/main/default/objects/Visita_a_Clientes__c/fields/Quem__c.field-meta.xml
<CustomField>
    <fullName>Quem__c</fullName>
    <label>Quem</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Anderson Clayton Weissheimer</fullName>
            </value>
            <value>
                <fullName>Charles Pintro</fullName>
            </value>
            <value>
                <fullName>Cristian Pirolli</fullName>
            </value>
            <value>
                <fullName>Edson Chambo</fullName>
            </value>
            <value>
                <fullName>Fagner Regis de Oliveira</fullName>
            </value>
            <value>
                <fullName>Fausto Fanchin</fullName>
            </value>
            <value>
                <fullName>Fernando Calazans</fullName>
            </value>
            <value>
                <fullName>Fernando Frenher</fullName>
            </value>
            <value>
                <fullName>Flávio Marçal dos Santos</fullName>
            </value>
            <value>
                <fullName>João Serrano</fullName>
            </value>
            <value>
                <fullName>Jorge Cristiano Rosa</fullName>
            </value>
            <value>
                <fullName>Lucas Hilario Fantineli</fullName>
            </value>
            <value>
                <fullName>Luis Fernando Cecatto</fullName>
            </value>
            <value>
                <fullName>Marcelo Steffen</fullName>
            </value>
            <value>
                <fullName>Murilo Brazero Cacheffo</fullName>
            </value>
            <value>
                <fullName>Otavio Gorni</fullName>
            </value>
            <value>
                <fullName>Pablo Souza</fullName>
            </value>
            <value>
                <fullName>Rogério Schneider</fullName>
            </value>
            <value>
                <fullName>Sandro Moreira</fullName>
            </value>
            <value>
                <fullName>Santiago Schiappacasse</fullName>
            </value>
            <value>
                <fullName>Sergio Bertagnolli</fullName>
            </value>
            <value>
                <fullName>Tiago Goulart</fullName>
            </value>
            <value>
                <fullName>Outro</fullName>
            </value>
            <value>
                <fullName>Marcelo</fullName>
            </value>
            <value>
                <fullName>César</fullName>
            </value>
            <value>
                <fullName>Santiago</fullName>
            </value>
            <value>
                <fullName>Marcos S. Berlezi</fullName>
            </value>
            <value>
                <fullName>Bernardo Zanardo</fullName>
            </value>
            <value>
                <fullName>Lucas Costa</fullName>
            </value>
            <value>
                <fullName>Willian Von Scharten</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>