Salesforce/main/default/main/default/objects/Visita_a_Clientes__c/fields/Tipo_da_Visita__c.field-meta.xml
<CustomField>
    <fullName>Tipo_da_Visita__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dia de campo</fullName>
            </value>
            <value>
                <fullName>Apresentação de dados, novos produtos e novos projetos</fullName>
            </value>
            <value>
                <fullName>Contrato de multiplicação</fullName>
            </value>
            <value>
                <fullName>Ensaio de manejo</fullName>
            </value>
            <value>
                <fullName>Treinamento/Palestra</fullName>
            </value>
            <value>
                <fullName>Combate à Pirataria</fullName>
            </value>
            <value>
                <fullName>Relatório Semanal</fullName>
            </value>
            <value>
                <fullName>Reunião</fullName>
            </value>
            <value>
                <fullName>Contato Telefônico</fullName>
            </value>
            <value>
                <fullName>Observações Gerais</fullName>
            </value>
            <value>
                <fullName>Visita aos Produtores</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>