Salesforce/main/default/main/default/objects/Visita_a_Clientes__c/validationRules/Nome_Concorrente.validationRule-meta.xml
<ValidationRule>
    <fullName>Nome_Concorrente</fullName>
    <active>false</active>
    <errorConditionFormula>AND(Nome_Multiplicador__c = &quot;&quot;,OR(ISPICKVAL( Modalidade_de_Multiplicador__c, &quot;Concorrente&quot;),ISPICKVAL( Modalidade_de_Multiplicador__c, &quot;Outro&quot;), ISPICKVAL( Modalidade_de_Multiplicador__c, &quot;Revenda Brasmax&quot;)))</errorConditionFormula>
    <errorDisplayField>Nome_Multiplicador__c</errorDisplayField>
    <errorMessage>El nome de multiplicador no debe estar vacio si a modalidade es Revenda Brasmax, Concorrente o Outro</errorMessage>
</ValidationRule>